cargo-features = ["edition"]

[package]
authors = ["Wendell Smith <wackywendell@gmail.com>"]
edition = "2018"
name = "rchat"
version = "0.1.0"

[lib]
name = "protos"
path = "src/protos/mod.rs"

[dependencies]
crossbeam = "0.4"
futures = "0.1"
grpcio = "0.3"
protobuf = "2.0"
rand = "0.4"
structopt = "0.2"

[build-dependencies]
protoc-grpcio = "0.2"