[package]
authors = ["Wendell Smith <wackywendell@gmail.com>"]
edition = "2018"
name = "rchat"
version = "0.1.0"

[lib]
name = "protos"
path = "src/protos/mod.rs"

[dependencies]
futures = "0.1"
grpc = "0.5"
log = "0.4"
protobuf = "3.0"
rand = "0.4"
structopt = "0.2"
tokio = "0.1"
# Needed for grpc built crate
tls-api = "0.1"

[build-dependencies]
protoc-rust-grpc = "0.5"